Refactor door placement logic to match avatar and chaser placement
- Updated the  method to use  for available positions.
- Ensured the door is placed on wall tiles that are adjacent to both a floor or avatar and a nothing tile.
- Simplified the logic for selecting random positions for the door, similar to the methods for placing the avatar and chaser.